samples/_failures_safe/1761342643_3271ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dd01310.c: In function ‘transform_bounding_box’:
./samples/SAFE/__tmp_0dd01310.c:122:9: error: expected expression at end of input
  122 |         if (transformed.y >
      |         ^~
./samples/SAFE/__tmp_0dd01310.c:122:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dd01310.c:122:9: error: expected declaration or statement at end of input
